# python-lucidmotors-webtool

./: .gitignore  pyproject.toml  requirements.txt
lucidmotors_web/: __init__.py
lucidmotors_web/static/: style.css
lucidmotors_web/templates/: avatar.html  avatar_response.html  layout.html  login.html  login_response.html  referrals.html  referrals_response.html  thanks.html  trip.html  trip_response.html
