[tool.poetry]
name = "lucidmotors-web"
version = "0.1.0"
description = ""
authors = ["Nick Shipp <nick@shipp.ninja>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = {extras = ["async"], version = "^3.0.0"}
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
